rollout/delete vendor business done
